@@ -737,7 +737,7 @@ $_lang["settings_photo"] = 'Photo';
 $_lang["settings_properties"] = 'Properties';
 $_lang["settings_site"] = 'Site settings';
 $_lang["settings_snippets"] = 'Snippets';
-$_lang["settings_strip_image_paths_message"] = 'Turning this on will have MODx rewrite image src\'s to be relative instead of absolute. This is very handy if you should ever wish to move your MODx installation (for example from a staging site to a production site). If you have no idea what this means, it\'s best just to leave it set to \'No\'.';
+$_lang["settings_strip_image_paths_message"] = 'If this is set to \'No\', MODx  will write file browser resource src\'s (images, files, flash, etc.) as absolute URLs. Relative URLs are helpful should you wish to move your MODx install, e.g., from a staging site to a production site. If you have no idea what this means, it\'s best just to leave it set to \'Yes\'.';
 $_lang["settings_strip_image_paths_title"] = 'Rewrite image paths?';
 $_lang["settings_templvars"] = 'Template Variables';
 $_lang["settings_title"] = 'System configuration';
